deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudsoa
  labels:
    app.kubernetes.io/part-of: cloudsoa
